test/bad/identifier2.prog
/*missing identifier: statements are parsed from top to bottom
*/

f x = g (x + 1);

g x = x
